--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "autoprefixer": "10.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-query": "3.39.3"
+    "react-query": "3.39.3",
+    "react-router-dom": "^6.14.2"
   }
 }
