Subida y cambios slider

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "3.39.3",
-    "react-router-dom": "^6.4.4"
+    "react-router-dom": "^6.4.4",
+    "swiper": "^10.1.0"
   }
 }
