--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,3 +16,5 @@ jobs:
         server:  ftp.yandrydev.com
         username: repoRaiola@yandrydev.com
         password: ${{ secrets.FTP_PASSWORD }}
+        local-dir: ./dist/
+        server-dir: /home/aspvovej/yandrydev.com/yandrydev
