--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server:  ftp.yandrydev.com
-        username: repoRaiola@yandrydev.com
+        server: ftp.yandrydev.com
+        username: yandrydev@yandrydev.com
         password: ${{ secrets.FTP_PASSWORD }}
         local-dir: ./dist/
         server-dir: /home/aspvovej/yandrydev.com/yandrydev/
