--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,10 @@ jobs:
         server: ftp.yandrydev.com
         username: yandrydev@yandrydev.com
         password: ${{ secrets.FTP_PASSWORD }}
-        local-dir: ./dist/
+        exclude: |
+          **/.git*
+          **/.git*/**
+          **/node_modules/**
+          **/.github/**
+          /*.babelrc*/
+        
