--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,5 +17,7 @@ jobs:
         username: yandrydev@yandrydev.com
         password: ${{ secrets.FTP_PASSWORD }}
         exclude: |
+          **/.git*
+          **/.git*/**
           **/node_modules/**
         
