--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,6 @@
-on: push
+on:
+  push:
+    branches: [ master, main ]
 name: 🚀 Deploy website on push
 jobs:
   web-deploy:
@@ -6,20 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: 🚚 Get latest code
-      uses: actions/checkout@v2
-
-    - name: Use Node.js 16
-      uses: actions/setup-node@v2-beta
-      with:
-        node-version: '16'
-      
-    - name: 🔨 Build Project
-      run: |
-        npm install
-        npm run build
+      uses: actions/checkout@v3
     
     - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@4.1.0
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
         server: ftp.yandrydev.com
         username: yandrydev@yandrydev.com
