--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,5 @@ jobs:
         username:  ftp.yandrydev.com
         password: ${{ secrets.FTP_PASSWORD }}
         local-dir: dist/
+        protocol: ftps
+        port: 21 # todo replace with your web hosts ftps port
