--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.1.0
       with:
-        server:  yandry@yandrydev.com
+        server:  yandrydev@yandrydev.com
         username:  ftp.yandrydev.com
         password: ${{ secrets.FTP_PASSWORD }}
         local-dir: dist/
