--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,6 @@
-on: push
+on:
+  push:
+    branches: [ master, main ]
 name: 🚀 Deploy website on push
 jobs:
   web-deploy:
@@ -7,24 +9,11 @@ jobs:
     steps:
     - name: 🚚 Get latest code
       uses: actions/checkout@v3
-
-    - name: Use Node.js 16
-      uses: actions/setup-node@v2
-      with:
-        node-version: '16'
-      
-    - name: 🔨 Build Project
-      run: |
-        npm install
-        npm run build
     
-    - name: List output files
-      run: find dist/ -print
-      
     - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@4.1.0
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server:  yandrydev@yandrydev.com
-        username:  ftp.yandrydev.com
+        server: ftp.yandrydev.com
+        username: yandrydev@yandrydev.com
         password: ${{ secrets.FTP_PASSWORD }}
-        local-dir: dist/
+        local-dir: ./dist/
