--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.1.0",
     "autoprefixer": "10.4.5",
+    "i18next": "^23.10.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
