--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
     "@babel/preset-react": "7.18.6",
     "babel-loader": "9.1.2",
     "babel-plugin-styled-components": "^2.1.4",
-    "css-loader": "6.7.3",
+    "css-loader": "^6.7.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "5.5.1",
+    "mini-css-extract-plugin": "^2.9.0",
     "node-sass": "8.0.0",
     "sass-loader": "13.2.2",
-    "style-loader": "3.3.2",
+    "style-loader": "^3.3.2",
     "url-loader": "^4.1.1",
     "webpack": "5.81.0",
     "webpack-cli": "5.0.2",
