Fix changes build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,18 @@ jobs:
     steps:
     - name: 🚚 Get latest code
       uses: actions/checkout@v3
+    - name: 🔨 Build Project
+      run: |
+        npm install
+        npm run build
     
+    - name: List output files
+      run: find dist/ -print
+
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
         server: ftp.yandrydev.com
         username: yandrydev@yandrydev.com
         password: ${{ secrets.FTP_PASSWORD }}
+        local-dir: dist/
