--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: 🚚 Get latest code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: 🔨 Build Project
       run: |
         npm install
@@ -18,9 +18,13 @@ jobs:
       run: find dist/ -print
 
     - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:
         server: ftp.yandrydev.com
         username: yandrydev@yandrydev.com
         password: ${{ secrets.FTP_PASSWORD }}
         local-dir: dist/
+        exclude: |
+          **/.git*
+          **/.git*/**
+          **/node_modules/**
