--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
         username: yandrydev@yandrydev.com
         password: ${{ secrets.FTP_PASSWORD }}
         local-dir: dist/
+        server-dir: /home/aspvovej/public_html
         exclude: |
           **/.git*
           **/.git*/**
