--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,7 @@ jobs:
         server: ftp.yandrydev.com
         username: yandrydev@yandrydev.com
         password: ${{ secrets.FTP_PASSWORD }}
-        local-dir: dist/
-        server-dir: ./
+        local-dir: ./dist/
         exclude: |
           **/.git*
           **/.git*/**
