--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,8 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:
         server: ftp.yandrydev.com
-        username: yandrydev@yandrydev.com
+        username: yandrydevservices@yandrydev.com
         password: ${{ secrets.FTP_PASSWORD }}
-        local-dir: ./dist/
         exclude: |
           **/.git*
           **/.git*/**
