--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:
         server: ftp.yandrydev.com
-        username: yandrydevservices@yandrydev.com
+        username: yandrydev@yandrydev.com
         password: ${{ secrets.FTP_PASSWORD }}
         exclude: |
           **/.git*
