Proxy inverso para http : SIN HTTPS Y SIN SSL

--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -1,17 +1,19 @@
-worker_processes 4;
+worker_processes 4; #Establece el número de procesos de trabajo que Nginx utilizará para manejar las solicitudes. En este caso, se han configurado 4 procesos de trabajo.
 
 events {
-    worker_connections 1024;
+    worker_connections 1024; #Define el número máximo de conexiones simultáneas que puede manejar cada proceso de trabajo.
 }
 
 http {
     server {
-        listen 3000;
-        
+        listen 80;  # Escuchar solo en el puerto 80 por defecto HTTP
+
         location / {
-            root /usr/share/nginx/html;
-            try_files $uri $uri/ /index.html;
+            root /usr/share/nginx/html; #Establece el directorio raíz desde el cual se servirán los archivos estáticos.
+            try_files $uri $uri/ /index.html;  Intenta servir el archivo solicitado ($uri). Si no se encuentra, intenta servir un directorio ($uri/). Si eso también falla, se sirve index.html.
             include /etc/nginx/mime.types;
+            proxy_pass http://localhost:3000;  # Redirige todas las solicitudes al puerto 3000
+            include /etc/nginx/proxy_params;  # Incluye archivos de configuración para proxies
         }
     }
 }
