Fix error proxy pass

--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -12,7 +12,7 @@ http {
             root /usr/share/nginx/html; #Establece el directorio raíz desde el cual se servirán los archivos estáticos.
             try_files $uri $uri/ /index.html;  Intenta servir el archivo solicitado ($uri). Si no se encuentra, intenta servir un directorio ($uri/). Si eso también falla, se sirve index.html.
             include /etc/nginx/mime.types;
-            proxy_pass http://localhost:3000;  # Redirige todas las solicitudes al puerto 3000
+            proxy_pass http://51.77.192.244:3000/;  # Redirige todas las solicitudes al puerto 3000
             include /etc/nginx/proxy_params;  # Incluye archivos de configuración para proxies
         }
     }
