Cambios nginx puerto 80

--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -7,13 +7,16 @@ events {
 http {
     server {
         listen 80;  # Escuchar solo en el puerto 80 por defecto HTTP
-
+        server_name yandrydev.es;
         location / {
             root /usr/share/nginx/html; #Establece el directorio raíz desde el cual se servirán los archivos estáticos.
             try_files $uri $uri/ /index.html;  Intenta servir el archivo solicitado ($uri). Si no se encuentra, intenta servir un directorio ($uri/). Si eso también falla, se sirve index.html.
             include /etc/nginx/mime.types;
             proxy_pass http://51.77.192.244:3000/;  # Redirige todas las solicitudes al puerto 3000
-            include /etc/nginx/proxy_params;  # Incluye archivos de configuración para proxies
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
