--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,7 @@ services:
     volumes:
       - /app/node_modules
       - .:/app
+      - ./.nginx/nginx.conf:/etc/nginx/nginx.conf 
     environment:
       - WATCHPACK_POLLING=true
+    
