subida para docker en dominio

--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -1,22 +1,37 @@
-worker_processes 4; #Establece el número de procesos de trabajo que Nginx utilizará para manejar las solicitudes. En este caso, se han configurado 4 procesos de trabajo.
+worker_processes 4;
 
 events {
-    worker_connections 1024; #Define el número máximo de conexiones simultáneas que puede manejar cada proceso de trabajo.
+    worker_connections 1024;
 }
 
 http {
+    include mime.types;
+
+    set_real_ip_from        0.0.0.0/0;
+    real_ip_recursive       on;
+    real_ip_header          X-Forwarded-For;
+    limit_req_zone          $binary_remote_addr zone=mylimit:10m rate=10r/s;
+
     server {
-        listen 80;  # Escuchar solo en el puerto 80 por defecto HTTP
+        listen 80;
         server_name yandrydev.es;
+
+        root /usr/share/nginx/html;
+        limit_req zone=mylimit burst=70 nodelay;
+
         location / {
-            root /usr/share/nginx/html; #Establece el directorio raíz desde el cual se servirán los archivos estáticos.
-            try_files $uri $uri/ /index.html;  Intenta servir el archivo solicitado ($uri). Si no se encuentra, intenta servir un directorio ($uri/). Si eso también falla, se sirve index.html.
-            include /etc/nginx/mime.types;
-            proxy_pass http://51.77.192.244:3000/;  # Redirige todas las solicitudes al puerto 3000
+            try_files $uri $uri/ /index.html;
+            include /etc/nginx/mime.types; 
+            proxy_pass http://51.77.192.244;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   /usr/share/nginx/html;
         }
     }
 }
