--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -13,16 +13,17 @@ http {
     limit_req_zone          $binary_remote_addr zone=mylimit:10m rate=10r/s;
 
     server {
-        listen 80;
+        listen 80;   
+        listen [::]:80;    
         server_name yandrydev.es;
-
-        root /usr/share/nginx/html;
+        
         limit_req zone=mylimit burst=70 nodelay;
 
         location / {
+            root /usr/share/nginx/html;
             try_files $uri $uri/ /index.html;
             include /etc/nginx/mime.types; 
-            proxy_pass http://51.77.192.244;
+            proxy_pass http://51.77.192.244/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -35,3 +36,5 @@ http {
         }
     }
 }
+
+
