--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -5,25 +5,18 @@ events {
 }
 
 http {
-    include mime.types;
-
-    set_real_ip_from        0.0.0.0/0;
-    real_ip_recursive       on;
-    real_ip_header          X-Forwarded-For;
-    limit_req_zone          $binary_remote_addr zone=mylimit:10m rate=10r/s;
-
+   
     server {
         listen 3000;   
         listen [::]:3000;    
-        server_name yandrydev.es;
+        server_name 51.77.192.244;
         
         limit_req zone=mylimit burst=70 nodelay;
 
         location / {
-            root /usr/share/nginx/html;
             try_files $uri $uri/ /index.html;
             include /etc/nginx/mime.types; 
-            proxy_pass http://51.77.192.244/;
+            proxy_pass http://localhost:3000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
