--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -14,6 +14,7 @@ http {
         limit_req zone=mylimit burst=70 nodelay;
 
         location / {
+            root /usr/share/nginx/html;
             try_files $uri $uri/ /index.html;
             include /etc/nginx/mime.types; 
             proxy_pass http://localhost:3000/;
