--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -5,30 +5,13 @@ events {
 }
 
 http {
-   
     server {
-        listen 80;   
-        listen [::]:80;    
-        server_name 51.77.192.244;
-        
-        limit_req zone=mylimit burst=70 nodelay;
+        listen 3000;
 
         location / {
-            root /usr/share/nginx/html;
+            root /var/www/app/;
             try_files $uri $uri/ /index.html;
-            include /etc/nginx/mime.types; 
-            proxy_pass http://localhost:3000/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /usr/share/nginx/html;
+            include /etc/nginx/mime.types;
         }
     }
 }
-
-
