--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -1,17 +1,10 @@
-worker_processes 4;
+server {
+    listen 3000;
 
-events {
-    worker_connections 1024;
-}
-
-http {
-    server {
-        listen 3000;
-
-        location / {
-            root /var/www/app/;
-            try_files $uri $uri/ /index.html;
-            include /etc/nginx/mime.types;
-        }
+    location / {
+        root /usr/share/nginx/html/;
+        try_files $uri $uri/ /index.html;
+        include /etc/nginx/mime.types;
     }
 }
+
