fix nginx server

--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -1,10 +1,17 @@
 server {
-    listen 3000;
+    listen 80;
+    server_name yandrydev.es;
+
+    root /usr/share/nginx/html;
+    index index.html;
 
     location / {
-        root /usr/share/nginx/html/;
         try_files $uri $uri/ /index.html;
-        include /etc/nginx/mime.types;
     }
-}
 
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        try_files $uri =404;
+    }
+
+    include /etc/nginx/mime.types;
+}
