--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-lottie-player": "^2.0.0",
     "react-query": "3.39.3",
     "react-router-dom": "^6.4.4",
+    "sass": "^1.77.6",
     "swiper": "^10.1.0"
   }
 }
