--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "react-query": "3.39.3",
     "react-router-dom": "^6.4.4",
     "sass": "^1.77.6",
+    "sweetalert2": "^11.12.0",
+    "sweetalert2-react-content": "^5.0.7",
     "swiper": "^10.1.0"
   }
 }
