--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,9 @@ node_modules
 # Ignora todos los archivos de texto
 *.txt
 
+#Ignora ssl
+
+.nginx/ssl
+
 # Ignora los archivos relacionados a API keys
 .env
