--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -7,6 +7,28 @@ server {
 
     location / {
         try_files $uri $uri/ /index.html;
+        return 301 https://$host$request_uri;
+    }
+
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        try_files $uri =404;
+    }
+
+    include /etc/nginx/mime.types;
+}
+
+server {
+    listen 443 ssl;
+    server_name yandrydev.es;
+
+    ssl_certificate /etc/nginx/ssl/yandrydev.es.crt;
+    ssl_certificate_key /etc/nginx/ssl/yandrydev.es.key;
+
+    root /usr/share/nginx/html;
+    index index.html;
+
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
