--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -12,17 +12,26 @@ server {
 
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         try_files $uri =404;
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
     }
 
     include /etc/nginx/mime.types;
 }
 
 server {
-    listen 443 ssl;
+    listen 443 ssl http2;
     server_name yandrydev.es;
 
     ssl_certificate /etc/nginx/ssl/yandrydev.es.crt;
     ssl_certificate_key /etc/nginx/ssl/yandrydev.es.key;
+
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+
+    ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+    ssl_prefer_server_ciphers on;
+    ssl_protocols TLSv1.2 TLSv1.3;
 
     root /usr/share/nginx/html;
     index index.html;
@@ -33,6 +42,8 @@ server {
 
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         try_files $uri =404;
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
     }
 
     include /etc/nginx/mime.types;
