--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.1.0",
     "autoprefixer": "10.4.5",
+    "brotli-webpack-plugin": "^1.1.0",
     "i18next": "^23.10.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
