--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "i18next": "^23.10.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.0.1",
     "react-lazy-load-image-component": "^1.6.0",
     "react-lottie-player": "^2.0.0",
