--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-react": "7.18.6",
     "babel-loader": "9.1.2",
     "babel-plugin-styled-components": "^2.1.4",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.7.3",
     "dotenv-webpack": "^8.1.0",
     "file-loader": "^6.2.0",
