--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@auth0/auth0-react": "^2.1.0",
     "autoprefixer": "10.4.5",
     "brotli-webpack-plugin": "^1.1.0",
+    "favicons-webpack-plugin": "^6.0.1",
     "i18next": "^23.10.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
