--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -16,6 +16,11 @@ server {
         add_header Cache-Control "public, no-transform";
     }
 
+    add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'none'; script-src 'self'; style-src 'self'; img-src 'self' data:; object-src 'none'; base-uri 'self'; form-action 'self';";
+    add_header X-Content-Type-Options "nosniff";
+    add_header X-Frame-Options "DENY";
+    add_header X-XSS-Protection "1; mode=block";
+    add_header Referrer-Policy "no-referrer-when-downgrade";
     include /etc/nginx/mime.types;
 }
 
@@ -32,6 +37,12 @@ server {
     ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
     ssl_prefer_server_ciphers on;
     ssl_protocols TLSv1.2 TLSv1.3;
+    
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    resolver 1.1.1.1 1.0.0.1 valid=300s;
+    resolver_timeout 5s;
+    ssl_buffer_size 4k;
 
     root /usr/share/nginx/html;
     index index.html;
@@ -46,5 +57,11 @@ server {
         add_header Cache-Control "public, no-transform";
     }
 
+    add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'none'; script-src 'self'; style-src 'self'; img-src 'self' data:; object-src 'none'; base-uri 'self'; form-action 'self';";
+    add_header X-Content-Type-Options "nosniff";
+    add_header X-Frame-Options "DENY";
+    add_header X-XSS-Protection "1; mode=block";
+    add_header Referrer-Policy "no-referrer-when-downgrade";
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
     include /etc/nginx/mime.types;
 }
