--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -1,49 +1,24 @@
 server {
-    listen 80;
-    server_name yandrydev.es;
-
-    root /usr/share/nginx/html;
-    index index.html;
-
-    location / {
-        try_files $uri $uri/ /index.html;
-        return 301 https://$host$request_uri;
-    }
-
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        try_files $uri =404;
-        expires 30d;
-        add_header Cache-Control "public, no-transform";
-    }
-
-    add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'none'; script-src 'self'; style-src 'self'; img-src 'self' data:; object-src 'none'; base-uri 'self'; form-action 'self';";
-    add_header X-Content-Type-Options "nosniff";
-    add_header X-Frame-Options "DENY";
-    add_header X-XSS-Protection "1; mode=block";
-    add_header Referrer-Policy "no-referrer-when-downgrade";
-    include /etc/nginx/mime.types;
-}
-
-server {
     listen 443 ssl http2;
     server_name yandrydev.es;
 
+    # Configuración SSL
     ssl_certificate /etc/nginx/ssl/yandrydev.es.crt;
     ssl_certificate_key /etc/nginx/ssl/yandrydev.es.key;
-
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
-
     ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
     ssl_prefer_server_ciphers on;
     ssl_protocols TLSv1.2 TLSv1.3;
     
+    # Seguridad SSL adicional
     ssl_stapling on;
     ssl_stapling_verify on;
     resolver 1.1.1.1 1.0.0.1 valid=300s;
     resolver_timeout 5s;
     ssl_buffer_size 4k;
 
+    # Root directory and index file
     root /usr/share/nginx/html;
     index index.html;
 
@@ -57,11 +32,13 @@ server {
         add_header Cache-Control "public, no-transform";
     }
 
-    add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'none'; script-src 'self'; style-src 'self'; img-src 'self' data:; object-src 'none'; base-uri 'self'; form-action 'self';";
+    # Seguridad y políticas
+    add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'none'; script-src 'self'; style-src 'self' https://fonts.googleapis.com 'unsafe-inline'; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; object-src 'none'; base-uri 'self'; form-action 'self';";
     add_header X-Content-Type-Options "nosniff";
     add_header X-Frame-Options "DENY";
     add_header X-XSS-Protection "1; mode=block";
     add_header Referrer-Policy "no-referrer-when-downgrade";
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+
     include /etc/nginx/mime.types;
 }
