--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -33,7 +33,7 @@ server {
     }
 
     # Seguridad y políticas
-    add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'none'; script-src 'self'; style-src 'self' https://fonts.googleapis.com 'unsafe-inline'; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; object-src 'none'; base-uri 'self'; form-action 'self'; connect-src 'self' https://yandrydev.es;";
+    add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'none'; script-src 'self'; style-src 'self' https://fonts.googleapis.com 'unsafe-inline'; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; object-src 'none'; base-uri 'self'; form-action 'self'; connect-src 'self' https://yandrydev.es https://yandrydev.es:3000;";
     add_header X-Content-Type-Options "nosniff";
     add_header X-Frame-Options "DENY";
     add_header X-XSS-Protection "1; mode=block";
