Politica de privacidad header

--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -39,6 +39,7 @@ server {
     add_header X-XSS-Protection "1; mode=block";
     add_header Referrer-Policy "no-referrer-when-downgrade";
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+    add_header Permissions-Policy "accelerometer=(), autoplay=(), camera=(), encrypted-media=(), fullscreen=(self), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), midi=(), payment=(), picture-in-picture=(), usb=(), xr-spatial-tracking=(), clipboard-read=(self), clipboard-write=(self)";
 
     include /etc/nginx/mime.types;
 }
