Update name dockerhub  deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,5 +26,5 @@ jobs:
           push: true
           # Make sure to replace with your own namespace and repository
           tags: |
-            namespace/example:latest 
+            yandryvilla/dockploy-porfolio:v1 
           platforms: linux/amd64
